momento/src/commands/custom_role/snapshots/display_account_management_rule_with_all_permissions.snap
---
source: momento/src/commands/custom_role/display.rs
expression: rule.to_string()
---
- Account Management:
  Allowed actions: Read, List
