momento/src/commands/custom_role/snapshots/display_auth_management_rule_with_all_permissions.snap
---
source: momento/src/commands/custom_role/display.rs
expression: rule.to_string()
---
- Auth Management:
  Items: all
  Allowed actions: Read, Write, List
