momento/src/commands/custom_role/snapshots/display_cache_rule_with_limited_permissions_by_prefix.snap
---
source: momento/src/commands/custom_role/display.rs
expression: rule.to_string()
---
- Serverless Cache: foobar
  Keys with prefix: hello
  Allowed actions: Write
