momento/src/commands/custom_role/snapshots/display_database_rule_with_all_permissions.snap
---
source: momento/src/commands/custom_role/display.rs
expression: rule.to_string()
---
- Databases (all)
  Keys: all
  Allowed actions: Read, Write
