momento/src/commands/custom_role/snapshots/display_database_rule_with_name_permissions.snap
---
source: momento/src/commands/custom_role/display.rs
expression: rule.to_string()
---
- Database: orders
  Key: orders:pending
  Allowed actions: Read, Write
