momento/src/commands/custom_role/snapshots/display_function_rule_with_all_permissions.snap
---
source: momento/src/commands/custom_role/display.rs
expression: rule.to_string()
---
- Functions (all)
  In caches: all
  Allowed actions: Invoke
