momento/src/commands/custom_role/snapshots/display_function_rule_with_name_permissions.snap
---
source: momento/src/commands/custom_role/display.rs
expression: rule.to_string()
---
- Function: resize-image
  In cache: edge-app
  Allowed actions: Invoke
