momento/src/commands/custom_role/snapshots/display_function_rule_with_prefix_permissions.snap
---
source: momento/src/commands/custom_role/display.rs
expression: rule.to_string()
---
- Functions with prefix: webhook-
  In cache: edge-app
  Allowed actions: Invoke
